# wwn_client

./: Cargo.toml  index.html  input.css
src/: data.rs  error.rs  fetch_storage.rs  filter.rs  home.rs  lib.rs  main.rs  status.rs
src/components/: layout.rs  mod.rs  not_found.rs  sidebar.rs
src/data/: minimal_station.rs  mod.rs
src/style/: definitions.rs  mod.rs  state.rs  tables.rs
src/tables/: minimal_station.rs  mod.rs  river_list.rs
